[gd_scene format=3 uid="uid://56xon3jcf3sm"]

[ext_resource type="Script" uid="uid://ba868rl11ryfj" path="res://scripts/entities/fish.gd" id="1_gk455"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_w8q0n"]
bounce = 0.5

[sub_resource type="CircleShape2D" id="CircleShape2D_w8q0n"]
radius = 25.75

[node name="Fish" type="RigidBody2D" unique_id=1773258173]
input_pickable = true
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_w8q0n")
script = ExtResource("1_gk455")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=2076675345]
shape = SubResource("CircleShape2D_w8q0n")

[node name="FishSprite" type="Sprite2D" parent="." unique_id=1437493492]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
